--- a/frontend/src/pages/AuthPages/AuthPages.css
+++ b/frontend/src/pages/AuthPages/AuthPages.css
@@ -12,16 +12,13 @@
 }
 
 .auth-card {
-    background-color: #ffffff;
-    border-radius: 1rem;
+    background-color: white;
+    border-radius: var(--radius-xl);
     overflow: auto;
-    /* 16px */
-    box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
-    padding: 2rem;
-    /* 32px */
+    box-shadow: var(--shadow-lg);
+    padding: var(--space-8);
     width: 100%;
     max-width: 28rem;
-    /* 448px */
     margin: 0 auto;
     box-sizing: border-box;
 }
